--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -13,5 +13,9 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+          - name: Remove File
+  uses: JesseTG/rm@v1.0.3
+  with:
+    path: ~/.m2/repository
       - name: Build with Maven
         run: mvn --batch-mode package
