--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -8,5 +8,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Cache the Maven packages to speed up build
+      uses: actions/cache@v1
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2 
       - name: Build with Maven
-        run: ls -a ~/.m2/repository
+        run: mvn package
