--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -14,5 +14,6 @@ jobs:
           distribution: 'zulu'
           java-version: '8'
           cache: 'maven'
+          key: ${{ runner.os }}-mycache-v1-${{ hashFiles(...) }}
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
