--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -12,8 +12,51 @@ jobs:
         uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
-          java-version: '17'
+          java-version: '8'
           cache: 'maven'
-          key: ${{ runner.os }}-mycache-v1-${{ hashFiles('**/pom.xml') }}
+      - name: maven-settings-xml-action
+        uses: whelk-io/maven-settings-xml-action@v20
+        with:
+            repositories: >
+             [
+              {
+              "id": "pentaho-public",
+              "name": "Pentaho Public",
+              "url": "https://repo.orl.eng.hitachivantara.com/artifactory/pnt-mvn/",
+              "releases": {
+                  "enabled": "true",
+                  "updatePolicy": "always"
+              },
+             "snapshots": {
+              "enabled": "true",
+              "updatePolicy": "always"
+             }
+             }
+             ]
+            plugin_repositories: >
+             [
+             {
+             "id": "pentaho-public",
+             "name": "Pentaho Public",
+             "url": "https://repo.orl.eng.hitachivantara.com/artifactory/pnt-mvn/",
+             "releases": {
+               "enabled": "true",
+               "updatePolicy": "always"
+               },
+             "snapshots": {
+              "enabled": "true"
+              "updatePolicy": "always"
+              }
+             }
+             ]
+             servers: >
+             [
+             {
+             "id": "pentaho-public",
+             "username": "devreaduser",
+             "password": "piMs58wRfyyZbEM"
+             }
+             ]
+            output_file: .m2/settings.xml
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
