--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -44,7 +44,7 @@ jobs:
                "updatePolicy": "always"
                },
              "snapshots": {
-              "enabled": "true"
+              "enabled": "true",
               "updatePolicy": "always"
               }
              }
