--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -31,6 +31,19 @@ jobs:
               "enabled": "true",
               "updatePolicy": "always"
              }
+             },
+               {
+              "id": "clojars",
+              "name": "clojars",
+              "url": "https://clojars.org/repo/",
+              "releases": {
+                  "enabled": "true",
+                  "updatePolicy": "always"
+              },
+             "snapshots": {
+              "enabled": "true",
+              "updatePolicy": "always"
+             }
              }
              ]
             plugin_repositories: >
