--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -72,7 +72,7 @@ jobs:
              ]
             output_file: .m2/settings.xml
       - name: Build with Maven
-      - run: mvn --batch-mode --update-snapshots package
+        run: mvn --batch-mode --update-snapshots package
       - run: mkdir staging && cp target/*.zip staging
       - uses: actions/upload-artifact@v3
         with:
